[project]
name = "cv"
version = "0.1.0"
description = "Assignment for CSE732"
authors = [
    {name = "GentleClash",email = "ayushbajpai016@gmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
